--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -1,3 +1,10 @@
 @import './base/typography';
 @import './Helpers/mixins';
 @import './Helpers/variables';
+@import './layout/main';
+@import './layout/enterText';
+@import './layout/generateText';
+@import './layout/header';
+@import './layout/modal';
+@import './layout/reset';
+@import './layout/timer';
