--- a/src/index.scss
+++ b/src/index.scss
@@ -3,6 +3,8 @@
 @import './sass/Helpers/variables';
 
 body {
+  height: 100vh;
+  width: 100vw;
   margin: 0;
   padding: 0;
   box-sizing: border-box;
