--- a/src/sass/layout/_timer.scss
+++ b/src/sass/layout/_timer.scss
@@ -2,15 +2,15 @@
 @import '../Helpers/variables';
 
 .timer {
+    margin-top: 10px;
     display: flex;
     flex-direction: row;
     justify-content: center;
     align-items: center;
-    gap: 10px;
+    gap: 20px;
 
     &__time {
-        border: 1px solid black;
-        padding: 5px 5px 5px 5px;
+        width: 50px;
         border-radius: $radius;
         font-size: $bigger-font-size;
     }
