--- a/src/sass/layout/_generateText.scss
+++ b/src/sass/layout/_generateText.scss
@@ -2,11 +2,9 @@
 @import '../Helpers/variables';
 
 .generateText {
-    &__input {
+    &__text {
         font-family: 'Poppins', sans-serif;
         font-size: $medium-font-size;
-        width: 100%;
-        height: 100%;
         border-radius: $radius;
         padding: 10px;
         border: none;
