--- a/src/sass/layout/_generateText.scss
+++ b/src/sass/layout/_generateText.scss
@@ -9,5 +9,13 @@
         padding: 10px;
         border: none;
         background-color: $white;
+
+        &__success {
+            background-color: green;
+        }
+
+        &__danger {
+            background-color: red;
+        }
     }
 }
