--- a/src/sass/layout/_header.scss
+++ b/src/sass/layout/_header.scss
@@ -2,7 +2,45 @@
 @import '../Helpers/variables';
 
 .header {
+    text-align: center;
+
     &__title {
         font-size: $mega-font-size;
+
+        @media screen and (max-width: $smaller-screen) {
+            & {
+                font-size: $mediumer-font-size;
+            }
+        }
+    
+        @media screen and (min-width: $smaller-screen2) {
+            & {
+                font-size: $big-font-size;
+            }
+        }
+    
+        @media screen and (min-width: $small-screen) {
+            & {
+                font-size: $bigger-font-size;
+            }
+        }
+    
+        @media screen and (min-width: $medium-screen) {
+            & {
+                font-size: $bigger-font-size;
+            }
+        }
+    
+        @media screen and (min-width: $large-screen) {
+            & {
+                font-size: $bigger-font-size;
+            }
+        }
+    
+        @media screen and (min-width: $extra-large-screen) {
+            & {
+                font-size: $mega-font-size;
+            }
+        }
     }
 }
