--- a/src/sass/layout/_modal.scss
+++ b/src/sass/layout/_modal.scss
@@ -15,7 +15,6 @@
             font-size: $big-font-size;
             font-weight: $font-light;
         }
-        
     }
 
     &__accuracy {
@@ -26,6 +25,150 @@
         &__text {
             font-size: $big-font-size;
             font-weight: $font-light;
+        }
+    }
+
+    @media screen and (max-width: $smaller-screen) {
+        & {
+            margin-top: 20px;
+            @include flexbox($direction: column);
+            gap: 5px;
+
+            &__correct {
+                font-size: $medium-font-size;
+
+                &__text {
+                    font-size: $medium-font-size;
+                }
+            }
+
+            &__accuracy {
+                font-size: $medium-font-size;
+
+                &__text {
+                    font-size: $medium-font-size;
+                }
+            }
+        }
+    }
+
+    @media screen and (min-width: $smaller-screen2) {
+        & {
+            margin-top: 15px;
+            @include flexbox($direction: column);
+            gap: 5px;
+
+            &__correct {
+                font-size: $mediumer-font-size;
+
+                &__text {
+                    font-size: $mediumer-font-size;
+                }
+            }
+
+            &__accuracy {
+                font-size: $mediumer-font-size;
+
+                &__text {
+                    font-size: $mediumer-font-size;
+                }
+            }
+        }
+    }
+
+    @media screen and (min-width: $small-screen) {
+        & {
+            margin-top: 15px;
+            @include flexbox();
+            gap: 50px;
+
+            &__correct {
+                font-size: $mediumer-font-size;
+
+                &__text {
+                    font-size: $mediumer-font-size;
+                }
+            }
+
+            &__accuracy {
+                font-size: $mediumer-font-size;
+
+                &__text {
+                    font-size: $mediumer-font-size;
+                }
+            }
+        }
+    }
+
+    @media screen and (min-width: $medium-screen) {
+        & {
+            margin-top: 15px;
+            @include flexbox();
+            gap: 50px;
+
+            &__correct {
+                font-size: $mediumer-font-size;
+
+                &__text {
+                    font-size: $mediumer-font-size;
+                }
+            }
+
+            &__accuracy {
+                font-size: $mediumer-font-size;
+
+                &__text {
+                    font-size: $mediumer-font-size;
+                }
+            }
+        }
+    }
+
+    @media screen and (min-width: $large-screen) {
+        & {
+            margin-top: 15px;
+            @include flexbox();
+            gap: 50px;
+
+            &__correct {
+                font-size: $mediumer-font-size;
+
+                &__text {
+                    font-size: $mediumer-font-size;
+                }
+            }
+
+            &__accuracy {
+                font-size: $mediumer-font-size;
+
+                &__text {
+                    font-size: $mediumer-font-size;
+                }
+            }
+        }
+    }
+
+    @media screen and (min-width: $extra-large-screen) {
+        & {
+            margin-top: 15px;
+            @include flexbox();
+            gap: 50px;
+
+            &__correct {
+                font-size: $big-font-size;
+
+                &__text {
+                    font-size: $big-font-size;
+                }
+            }
+
+            &__accuracy {
+                font-size: $big-font-size;
+
+                &__text {
+                    font-size: $big-font-size;
+                }
+            }
         }
     }
 }
