--- a/src/index.scss
+++ b/src/index.scss
@@ -3,8 +3,10 @@
 @import './sass/Helpers/variables';
 
 body {
-  width: 100vw;
-  height: 100vh;
+  width: 100%;
+  height: 100%;
+  max-width: 100vw;
+  max-height: 100vh;
   margin: 0;
   padding: 0;
   box-sizing: border-box;
